Closed
Bug 1668101
Opened 5 years ago
Closed 5 years ago
Add support for AXSame/DifferentTypeSearchKey for VO navigation
Categories
(Core :: Disability Access APIs, defect, P1)
Tracking
()
RESOLVED
FIXED
83 Branch
| Tracking | Status | |
|---|---|---|
| firefox83 | --- | fixed |
People
(Reporter: morgan, Assigned: morgan)
References
(Blocks 1 open bug)
Details
(Whiteboard: [mac2020_2])
Attachments
(1 file)
STR:
Load wikipedia, focus a text node
VO+cmd+s should navigate to next text node (add shift to go to prev-text node)
VO+cmd+d should navigate to closest non-text node (add shift to go to prev-closest non-text node)
Actual:
nothing happens
| Assignee | ||
Comment 1•5 years ago
|
||
Pushed by mreschenberg@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/052fe7b992c4
Support same/different type naviagation with VO r=eeejay
Comment 3•5 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 5 years ago
status-firefox83:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•