Bug 1668101: Support same/different type naviagation with VO r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D91833